--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 spring.application.name=moinProject
+server.port=8083
+
+# H2 ?? ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# ?????? ?? ??
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# (????) H2 ?????? ?? ??
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# (????) ?????? ?? ? ??? ??
+spring.jpa.hibernate.ddl-auto=update
+
+# (????) SQL ?? ??
+spring.jpa.show-sql=true
+
+encryption.key=testmointestmoin
