--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 encryption.key=testmointestmoin
+
+jwt.secret=kukaedenkukaedenkukaedenkukaedenkukaeden
