POST 3. 송금 견적서를 갖고 오는 API 과 POST 4. 송금 접수 요청 API 중간정도

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '3.4.1'
 
+    implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'
+
+
+
 }
 
 tasks.named('test') {
